k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chicken-and-egg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chicken-and-egg
  template:
    metadata:
      labels:
        app: chicken-and-egg
    spec:
      securityContext:
        runAsUser: 1001
        runAsGroup: 1002
        fsGroup: 1003
#      initContainers:
#        - name: volume-permissions
#          image: ljocha/chicken-and-egg:latest
#          command: [ '/bin/bash', '-c', 'chown -R 1001:1001 /work' ]
#          volumeMounts:
#          - mountPath: /work
#            name: chicken-work-volume
      containers:      
      - name: chicken-and-egg
        image: ljocha/chicken-and-egg:latest
        securityContext:
          allowPrivilegeEscalation: false
        ports:
          - containerPort: 9000
        resources:
          requests:
            cpu: 4
          limits:
            cpu: 6
        volumeMounts:
          - mountPath: /work
            name: chicken-work-volume
        command: ['jupyter', 'notebook', '--ip', '0.0.0.0', '--port', '9000' ]
      volumes:
        - name: chicken-work-volume
          persistentVolumeClaim:
            claimName: test-volume
